cabal-version: 1.12
version:       0.0.0.1
category:      Client, Payments
homepage:      https://github.com/freckle/recurly-client
license-file:  LICENSE
license:       MIT
name:          recurly-client
build-type:    Simple

library
  exposed-modules:
    RecurlyClient
    RecurlyClient.Common
    RecurlyClient.Configuration
    RecurlyClient.Operations.Apply_credit_balance
    RecurlyClient.Operations.Cancel_subscription
    RecurlyClient.Operations.CancelPurchase
    RecurlyClient.Operations.Collect_invoice
    RecurlyClient.Operations.Convert_trial
    RecurlyClient.Operations.Create_account
    RecurlyClient.Operations.Create_account_external_account
    RecurlyClient.Operations.Create_authorize_purchase
    RecurlyClient.Operations.Create_billing_info
    RecurlyClient.Operations.Create_capture_purchase
    RecurlyClient.Operations.Create_coupon
    RecurlyClient.Operations.Create_coupon_redemption
    RecurlyClient.Operations.Create_external_product
    RecurlyClient.Operations.Create_external_product_external_product_reference
    RecurlyClient.Operations.Create_general_ledger_account
    RecurlyClient.Operations.Create_gift_card
    RecurlyClient.Operations.Create_invoice
    RecurlyClient.Operations.Create_item
    RecurlyClient.Operations.Create_line_item
    RecurlyClient.Operations.Create_measured_unit
    RecurlyClient.Operations.Create_pending_purchase
    RecurlyClient.Operations.Create_plan
    RecurlyClient.Operations.Create_plan_add_on
    RecurlyClient.Operations.Create_purchase
    RecurlyClient.Operations.Create_shipping_address
    RecurlyClient.Operations.Create_shipping_method
    RecurlyClient.Operations.Create_subscription
    RecurlyClient.Operations.Create_subscription_change
    RecurlyClient.Operations.Create_usage
    RecurlyClient.Operations.Deactivate_account
    RecurlyClient.Operations.Deactivate_coupon
    RecurlyClient.Operations.Deactivate_external_product_external_product_reference
    RecurlyClient.Operations.Deactivate_external_products
    RecurlyClient.Operations.Deactivate_item
    RecurlyClient.Operations.Deactivate_shipping_method
    RecurlyClient.Operations.Deactivate_unique_coupon_code
    RecurlyClient.Operations.Delete_account_external_account
    RecurlyClient.Operations.Generate_unique_coupon_codes
    RecurlyClient.Operations.Get_a_billing_info
    RecurlyClient.Operations.Get_account
    RecurlyClient.Operations.Get_account_acquisition
    RecurlyClient.Operations.Get_account_balance
    RecurlyClient.Operations.Get_account_external_account
    RecurlyClient.Operations.Get_account_note
    RecurlyClient.Operations.Get_add_on
    RecurlyClient.Operations.Get_billing_info
    RecurlyClient.Operations.Get_business_entity
    RecurlyClient.Operations.Get_coupon
    RecurlyClient.Operations.Get_credit_payment
    RecurlyClient.Operations.Get_custom_field_definition
    RecurlyClient.Operations.Get_dunning_campaign
    RecurlyClient.Operations.Get_export_dates
    RecurlyClient.Operations.Get_export_files
    RecurlyClient.Operations.Get_external_product
    RecurlyClient.Operations.Get_external_product_external_product_reference
    RecurlyClient.Operations.Get_external_subscription
    RecurlyClient.Operations.Get_external_subscription_external_payment_phase
    RecurlyClient.Operations.Get_general_ledger_account
    RecurlyClient.Operations.Get_gift_card
    RecurlyClient.Operations.Get_invoice
    RecurlyClient.Operations.Get_invoice_pdf
    RecurlyClient.Operations.Get_invoice_template
    RecurlyClient.Operations.Get_item
    RecurlyClient.Operations.Get_line_item
    RecurlyClient.Operations.Get_measured_unit
    RecurlyClient.Operations.Get_performance_obligation
    RecurlyClient.Operations.Get_performance_obligations
    RecurlyClient.Operations.Get_plan
    RecurlyClient.Operations.Get_plan_add_on
    RecurlyClient.Operations.Get_preview_renewal
    RecurlyClient.Operations.Get_shipping_address
    RecurlyClient.Operations.Get_shipping_method
    RecurlyClient.Operations.Get_site
    RecurlyClient.Operations.Get_subscription
    RecurlyClient.Operations.Get_subscription_change
    RecurlyClient.Operations.Get_transaction
    RecurlyClient.Operations.Get_unique_coupon_code
    RecurlyClient.Operations.Get_usage
    RecurlyClient.Operations.List_account_acquisition
    RecurlyClient.Operations.List_account_coupon_redemptions
    RecurlyClient.Operations.List_account_credit_payments
    RecurlyClient.Operations.List_account_external_account
    RecurlyClient.Operations.List_account_external_invoices
    RecurlyClient.Operations.List_account_external_subscriptions
    RecurlyClient.Operations.List_account_invoices
    RecurlyClient.Operations.List_account_line_items
    RecurlyClient.Operations.List_account_notes
    RecurlyClient.Operations.List_account_subscriptions
    RecurlyClient.Operations.List_account_transactions
    RecurlyClient.Operations.List_accounts
    RecurlyClient.Operations.List_active_coupon_redemptions
    RecurlyClient.Operations.List_add_ons
    RecurlyClient.Operations.List_billing_infos
    RecurlyClient.Operations.List_business_entities
    RecurlyClient.Operations.List_business_entity_invoices
    RecurlyClient.Operations.List_child_accounts
    RecurlyClient.Operations.List_coupons
    RecurlyClient.Operations.List_credit_payments
    RecurlyClient.Operations.List_custom_field_definitions
    RecurlyClient.Operations.List_dunning_campaigns
    RecurlyClient.Operations.List_entitlements
    RecurlyClient.Operations.List_external_invoices
    RecurlyClient.Operations.List_external_product_external_product_references
    RecurlyClient.Operations.List_external_products
    RecurlyClient.Operations.List_external_subscription_external_invoices
    RecurlyClient.Operations.List_external_subscription_external_payment_phases
    RecurlyClient.Operations.List_external_subscriptions
    RecurlyClient.Operations.List_general_ledger_accounts
    RecurlyClient.Operations.List_gift_cards
    RecurlyClient.Operations.List_invoice_coupon_redemptions
    RecurlyClient.Operations.List_invoice_line_items
    RecurlyClient.Operations.List_invoice_template_accounts
    RecurlyClient.Operations.List_invoice_templates
    RecurlyClient.Operations.List_invoices
    RecurlyClient.Operations.List_items
    RecurlyClient.Operations.List_line_items
    RecurlyClient.Operations.List_measured_unit
    RecurlyClient.Operations.List_plan_add_ons
    RecurlyClient.Operations.List_plans
    RecurlyClient.Operations.List_related_invoices
    RecurlyClient.Operations.List_shipping_addresses
    RecurlyClient.Operations.List_shipping_methods
    RecurlyClient.Operations.List_sites
    RecurlyClient.Operations.List_subscription_coupon_redemptions
    RecurlyClient.Operations.List_subscription_invoices
    RecurlyClient.Operations.List_subscription_line_items
    RecurlyClient.Operations.List_subscriptions
    RecurlyClient.Operations.List_transactions
    RecurlyClient.Operations.List_unique_coupon_codes
    RecurlyClient.Operations.List_usage
    RecurlyClient.Operations.Mark_invoice_failed
    RecurlyClient.Operations.Mark_invoice_successful
    RecurlyClient.Operations.Pause_subscription
    RecurlyClient.Operations.Preview_gift_card
    RecurlyClient.Operations.Preview_invoice
    RecurlyClient.Operations.Preview_purchase
    RecurlyClient.Operations.Preview_subscription_change
    RecurlyClient.Operations.Put_dunning_campaign_bulk_update
    RecurlyClient.Operations.Reactivate_account
    RecurlyClient.Operations.Reactivate_item
    RecurlyClient.Operations.Reactivate_subscription
    RecurlyClient.Operations.Reactivate_unique_coupon_code
    RecurlyClient.Operations.Record_external_transaction
    RecurlyClient.Operations.Redeem_gift_card
    RecurlyClient.Operations.Refund_invoice
    RecurlyClient.Operations.Remove_a_billing_info
    RecurlyClient.Operations.Remove_account_acquisition
    RecurlyClient.Operations.Remove_billing_info
    RecurlyClient.Operations.Remove_coupon_redemption
    RecurlyClient.Operations.Remove_line_item
    RecurlyClient.Operations.Remove_measured_unit
    RecurlyClient.Operations.Remove_plan
    RecurlyClient.Operations.Remove_plan_add_on
    RecurlyClient.Operations.Remove_shipping_address
    RecurlyClient.Operations.Remove_subscription_change
    RecurlyClient.Operations.Remove_usage
    RecurlyClient.Operations.Reopen_invoice
    RecurlyClient.Operations.Restore_coupon
    RecurlyClient.Operations.Resume_subscription
    RecurlyClient.Operations.Show_external_invoice
    RecurlyClient.Operations.Terminate_subscription
    RecurlyClient.Operations.Update_a_billing_info
    RecurlyClient.Operations.Update_account
    RecurlyClient.Operations.Update_account_acquisition
    RecurlyClient.Operations.Update_account_external_account
    RecurlyClient.Operations.Update_billing_info
    RecurlyClient.Operations.Update_coupon
    RecurlyClient.Operations.Update_external_product
    RecurlyClient.Operations.Update_general_ledger_account
    RecurlyClient.Operations.Update_invoice
    RecurlyClient.Operations.Update_item
    RecurlyClient.Operations.Update_measured_unit
    RecurlyClient.Operations.Update_plan
    RecurlyClient.Operations.Update_plan_add_on
    RecurlyClient.Operations.Update_shipping_address
    RecurlyClient.Operations.Update_shipping_method
    RecurlyClient.Operations.Update_subscription
    RecurlyClient.Operations.Update_usage
    RecurlyClient.Operations.Verify_billing_info
    RecurlyClient.Operations.Verify_billing_info_cvv
    RecurlyClient.Operations.Void_invoice
    RecurlyClient.SecuritySchemes
    RecurlyClient.TypeAlias
    RecurlyClient.Types
    RecurlyClient.Types.Account
    RecurlyClient.Types.AccountAcquisition
    RecurlyClient.Types.AccountAcquisitionList
    RecurlyClient.Types.AccountAcquisitionReadOnly
    RecurlyClient.Types.AccountAcquisitionUpdate
    RecurlyClient.Types.AccountBalance
    RecurlyClient.Types.AccountBalanceAmount
    RecurlyClient.Types.AccountCreate
    RecurlyClient.Types.AccountList
    RecurlyClient.Types.AccountMini
    RecurlyClient.Types.AccountNote
    RecurlyClient.Types.AccountNoteList
    RecurlyClient.Types.AccountPurchase
    RecurlyClient.Types.AccountReadOnly
    RecurlyClient.Types.AccountReference
    RecurlyClient.Types.AccountResponse
    RecurlyClient.Types.AccountUpdate
    RecurlyClient.Types.AddOn
    RecurlyClient.Types.AddOnCreate
    RecurlyClient.Types.AddOnList
    RecurlyClient.Types.AddOnMini
    RecurlyClient.Types.AddOnPricing
    RecurlyClient.Types.AddOnUpdate
    RecurlyClient.Types.Address
    RecurlyClient.Types.AddressWithName
    RecurlyClient.Types.BillingInfo
    RecurlyClient.Types.BillingInfoCreate
    RecurlyClient.Types.BillingInfoList
    RecurlyClient.Types.BillingInfoVerify
    RecurlyClient.Types.BillingInfoVerifyCVV
    RecurlyClient.Types.BusinessEntity
    RecurlyClient.Types.BusinessEntityList
    RecurlyClient.Types.Coupon
    RecurlyClient.Types.CouponBulkCreate
    RecurlyClient.Types.CouponCreate
    RecurlyClient.Types.CouponDiscount
    RecurlyClient.Types.CouponDiscountPricing
    RecurlyClient.Types.CouponList
    RecurlyClient.Types.CouponMini
    RecurlyClient.Types.CouponPricing
    RecurlyClient.Types.CouponRedemption
    RecurlyClient.Types.CouponRedemptionCreate
    RecurlyClient.Types.CouponRedemptionList
    RecurlyClient.Types.CouponRedemptionMini
    RecurlyClient.Types.CouponUpdate
    RecurlyClient.Types.CreditPayment
    RecurlyClient.Types.CreditPaymentList
    RecurlyClient.Types.CustomerPermission
    RecurlyClient.Types.CustomField
    RecurlyClient.Types.CustomFieldDefinition
    RecurlyClient.Types.CustomFieldDefinitionList
    RecurlyClient.Types.DunningCampaign
    RecurlyClient.Types.DunningCampaignList
    RecurlyClient.Types.DunningCampaignsBulkUpdate
    RecurlyClient.Types.DunningCampaignsBulkUpdateResponse
    RecurlyClient.Types.DunningCycle
    RecurlyClient.Types.DunningInterval
    RecurlyClient.Types.Entitlement
    RecurlyClient.Types.Entitlements
    RecurlyClient.Types.Error
    RecurlyClient.Types.ErrorMayHaveTransaction
    RecurlyClient.Types.ExportDates
    RecurlyClient.Types.ExportFile
    RecurlyClient.Types.ExportFiles
    RecurlyClient.Types.ExternalAccount
    RecurlyClient.Types.ExternalAccountCreate
    RecurlyClient.Types.ExternalAccountList
    RecurlyClient.Types.ExternalAccountUpdate
    RecurlyClient.Types.ExternalCharge
    RecurlyClient.Types.ExternalInvoice
    RecurlyClient.Types.ExternalInvoiceList
    RecurlyClient.Types.ExternalPaymentPhase
    RecurlyClient.Types.ExternalPaymentPhaseList
    RecurlyClient.Types.ExternalProduct
    RecurlyClient.Types.ExternalProductCreate
    RecurlyClient.Types.ExternalProductList
    RecurlyClient.Types.ExternalProductReferenceBase
    RecurlyClient.Types.ExternalProductReferenceCollection
    RecurlyClient.Types.ExternalProductReferenceCreate
    RecurlyClient.Types.ExternalProductReferenceMini
    RecurlyClient.Types.ExternalProductUpdate
    RecurlyClient.Types.ExternalSubscription
    RecurlyClient.Types.ExternalSubscriptionList
    RecurlyClient.Types.ExternalTransaction
    RecurlyClient.Types.FraudRiskRule
    RecurlyClient.Types.GeneralLedgerAccount
    RecurlyClient.Types.GeneralLedgerAccountCreate
    RecurlyClient.Types.GeneralLedgerAccountList
    RecurlyClient.Types.GeneralLedgerAccountUpdate
    RecurlyClient.Types.GiftCard
    RecurlyClient.Types.GiftCardCreate
    RecurlyClient.Types.GiftCardDelivery
    RecurlyClient.Types.GiftCardDeliveryCreate
    RecurlyClient.Types.GiftCardList
    RecurlyClient.Types.GiftCardRedeem
    RecurlyClient.Types.GrantedBy
    RecurlyClient.Types.Invoice
    RecurlyClient.Types.InvoiceAddress
    RecurlyClient.Types.InvoiceCollect
    RecurlyClient.Types.InvoiceCollection
    RecurlyClient.Types.InvoiceCreate
    RecurlyClient.Types.InvoiceList
    RecurlyClient.Types.InvoiceMini
    RecurlyClient.Types.InvoiceRefund
    RecurlyClient.Types.InvoiceTemplate
    RecurlyClient.Types.InvoiceTemplateList
    RecurlyClient.Types.InvoiceUpdate
    RecurlyClient.Types.Item
    RecurlyClient.Types.ItemCreate
    RecurlyClient.Types.ItemList
    RecurlyClient.Types.ItemMini
    RecurlyClient.Types.ItemUpdate
    RecurlyClient.Types.LineItem
    RecurlyClient.Types.LineItemCreate
    RecurlyClient.Types.LineItemList
    RecurlyClient.Types.LineItemRefund
    RecurlyClient.Types.MeasuredUnit
    RecurlyClient.Types.MeasuredUnitCreate
    RecurlyClient.Types.MeasuredUnitList
    RecurlyClient.Types.MeasuredUnitUpdate
    RecurlyClient.Types.PaymentMethod
    RecurlyClient.Types.PercentageTier
    RecurlyClient.Types.PercentageTiersByCurrency
    RecurlyClient.Types.PerformanceObligation
    RecurlyClient.Types.PerformanceObligationList
    RecurlyClient.Types.Plan
    RecurlyClient.Types.PlanCreate
    RecurlyClient.Types.PlanHostedPages
    RecurlyClient.Types.PlanList
    RecurlyClient.Types.PlanMini
    RecurlyClient.Types.PlanPricing
    RecurlyClient.Types.PlanRampInterval
    RecurlyClient.Types.PlanRampPricing
    RecurlyClient.Types.PlanUpdate
    RecurlyClient.Types.Pricing
    RecurlyClient.Types.ProrationSettings
    RecurlyClient.Types.PurchaseCreate
    RecurlyClient.Types.Settings
    RecurlyClient.Types.ShippingAddress
    RecurlyClient.Types.ShippingAddressCreate
    RecurlyClient.Types.ShippingAddressList
    RecurlyClient.Types.ShippingAddressUpdate
    RecurlyClient.Types.ShippingFeeCreate
    RecurlyClient.Types.ShippingMethod
    RecurlyClient.Types.ShippingMethodCreate
    RecurlyClient.Types.ShippingMethodList
    RecurlyClient.Types.ShippingMethodMini
    RecurlyClient.Types.ShippingMethodUpdate
    RecurlyClient.Types.Site
    RecurlyClient.Types.SiteList
    RecurlyClient.Types.Subscription
    RecurlyClient.Types.SubscriptionAddOn
    RecurlyClient.Types.SubscriptionAddOnCreate
    RecurlyClient.Types.SubscriptionAddOnPercentageTier
    RecurlyClient.Types.SubscriptionAddOnTier
    RecurlyClient.Types.SubscriptionAddOnUpdate
    RecurlyClient.Types.SubscriptionCancel
    RecurlyClient.Types.SubscriptionChange
    RecurlyClient.Types.SubscriptionChangeBillingInfo
    RecurlyClient.Types.SubscriptionChangeBillingInfoCreate
    RecurlyClient.Types.SubscriptionChangeCreate
    RecurlyClient.Types.SubscriptionChangeShippingCreate
    RecurlyClient.Types.SubscriptionCreate
    RecurlyClient.Types.SubscriptionList
    RecurlyClient.Types.SubscriptionPause
    RecurlyClient.Types.SubscriptionPurchase
    RecurlyClient.Types.SubscriptionRampInterval
    RecurlyClient.Types.SubscriptionRampIntervalResponse
    RecurlyClient.Types.SubscriptionShipping
    RecurlyClient.Types.SubscriptionShippingCreate
    RecurlyClient.Types.SubscriptionShippingPurchase
    RecurlyClient.Types.SubscriptionShippingUpdate
    RecurlyClient.Types.SubscriptionUpdate
    RecurlyClient.Types.TaxDetail
    RecurlyClient.Types.TaxInfo
    RecurlyClient.Types.Tier
    RecurlyClient.Types.TierPricing
    RecurlyClient.Types.Transaction
    RecurlyClient.Types.TransactionFraudInfo
    RecurlyClient.Types.TransactionList
    RecurlyClient.Types.UniqueCouponCode
    RecurlyClient.Types.UniqueCouponCodeList
    RecurlyClient.Types.UniqueCouponCodeParams
    RecurlyClient.Types.Usage
    RecurlyClient.Types.UsageCreate
    RecurlyClient.Types.UsageList
    RecurlyClient.Types.User

  hs-source-dirs:   src
  build-depends:
      aeson
    , base                  >=4.7 && <5
    , bytestring
    , ghc-prim
    , http-client
    , http-conduit
    , http-types
    , mtl
    , scientific
    , text
    , time
    , transformers
    , unordered-containers
    , vector

  default-language: Haskell2010
